26.1 update & cleanup